# stis_cti

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE.txt  MANIFEST.in  README.rst  README.txt  a01_stis_pcte.fits  anneals.p  archive_dark_query.py  available_cpu_count.py  cti_wrapper.py  pyproject.toml  setup.py  stis_cti_tutorial.html  stis_cti_tutorial.ipynb  testing_topics.txt
.github/workflows/: ci.yml  publish.yml
doc/: Makefile  README.rst  conf.py  index.rst  make.bat  obr101010_comparison.pro  qsg.rst  readme.rst  requirements.txt  stis_cti.rst
doc/_templates/: layout.html
scripts/: archive_dark_query  stis_cti
src/: StisFixYCte.c  StisPixCteCorr.h  StisPixCteCorr_funcs.c  StisPixCte_FixY.c
stis_cti/: StisPixCteCorr.py  __init__.py  archive_dark_query.py  available_cpu_count.py  custom_superdark_info.py  stis_cti.py  test_stis_cti.py  unit_tests.py
stis_cti/data/: a01_stis_pcte.fits  a02_stis_pcte.fits
tests/: test_stis_cti.py
